--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ test {
     maxParallelForks 1
 
     dependsOn cleanTest
-    // include '**/moqui-linic-legacySuite.class'
+    include '**/LegacySuite.class'
 
     systemProperty 'moqui.runtime', moquiDir.absolutePath + '/runtime'
     systemProperty 'moqui.conf', 'conf/MoquiDevConf.xml'
